--- a/index.html
+++ b/index.html
@@ -18,30 +18,54 @@
     <header class="menu">
       <div class="logo">
         <a href="#">
-          <img class="logo__img" src="./images/vrai logo.png" alt="logo"/>
+          <img class="logo__img" src="./images/vrailogo.png" alt="logo" />
         </a>
       </div>
       <div class="menu__icon">
-       <a href="#"><i class=" icon fa-solid fa-house"></i> Home</a>
-       <a href="#"><i class="icon fa-solid fa-user"></i> About</a>
-       <a href="#"><i class="icon fa-solid fa-file-contract"></i> </i> Project</a>
-       <a href="#"><i class="icon fa-solid fa-address-book"></i> Contact</a>
+        <a href="#"><i class="icon fa-solid fa-house"></i> Home</a>
+        <a href="#"><i class="icon fa-solid fa-user"></i> About</a>
+        <a href="#"><i class="icon fa-solid fa-file-contract"></i> Project</a>
+        <a href="#"><i class="icon fa-solid fa-address-book"></i> Contact</a>
         <a class="menu__icon--link" href="#">
           <i class="icon fa-solid fa-bars"></i>
         </a>
-    </div>
+      </div>
     </header>
 
     <main class="contain">
       <h1 class="contain__title">
         Hallo!!! <span class="hand">👋🏻</span><br />
         <br />
-        I'M <span class="name">ADOUFACK TSAMO PACOME</span>
+        Ich bin <span class="name">ADOUFACK TSAMO PACOME</span>
       </h1>
+      <p class="contain__text">Junior Web developer</p>
 
       <div class="contain__cards">
-        <img class="contain__cards--img" src="./images/student.jpeg" alt="student" />
+        <img
+          class="contain__cards--img"
+          src="./images/student.jpeg"
+          alt="student" />
       </div>
     </main>
+
+    <section class="about-me">
+      <div class="about-me__card-1">
+        <h3 class="about-me__title">Wer bin ich?</h3>
+        <p class="about-me__text">Hallo zusammen, ich bin  <span class="name">Pacome Adoufack Tsamo aus Kamerun</span> <br>
+          Ich bin derzeit als Student bei Dci Caree Institut. <br>
+          Ich bin ein Junior Webentwickler, der sich auf Frontend-Technologien spezialisiert mochte. <br>
+          Ich bin ein leidenschaftlicher und neugieriger Entwickler, der immer bereit ist, neue Technologien zu lernen. <br>
+          <br>
+          Abgesehen vom Programmieren gibt es noch einige andere Aktivitäten, die ich gerne mache <br>
+          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span> Musik hören <br>
+          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span> Filme schauen <br>
+          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span> Sport treiben <br>
+          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span> Reisen. <br>
+        </p>
+      </div>
+      <div class="about-me__card-2">
+        <img class="about-me__img" src="./images/AP..png" alt="paco">
+      </div>
+    </section>
   </body>
 </html>
