--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
           <img class="logo__img" src="./images/vrailogo.png" alt="logo" />
         </a>
       </div>
-      <div class="menu__icon">
-        <a href="#"><i class="icon fa-solid fa-house"></i> Home</a>
-        <a href="#"><i class="icon fa-solid fa-user"></i> About</a>
-        <a href="#"><i class="icon fa-solid fa-file-contract"></i> Project</a>
-        <a href="#"><i class="icon fa-solid fa-address-book"></i> Contact</a>
+      <div class="menu__wrapper">
+        <div class="menu-items">
+          <a href="#"><i class="icon fa-solid fa-house"></i> Home</a>
+          <a href="#"><i class="icon fa-solid fa-user"></i> About</a>
+          <a href="#"><i class="icon fa-solid fa-file-contract"></i> Project</a>
+          <a href="#"><i class="icon fa-solid fa-address-book"></i> Contact</a>
+        </div>
         <a class="menu__icon--link" href="#">
           <i class="icon fa-solid fa-bars"></i>
         </a>
@@ -51,21 +53,94 @@
     <section class="about-me">
       <div class="about-me__card-1">
         <h3 class="about-me__title">Wer bin ich?</h3>
-        <p class="about-me__text">Hallo zusammen, ich bin  <span class="name">Pacome Adoufack Tsamo aus Kamerun</span> <br>
-          Ich bin derzeit als Student bei Dci Caree Institut. <br>
-          Ich bin ein Junior Webentwickler, der sich auf Frontend-Technologien spezialisiert mochte. <br>
-          Ich bin ein leidenschaftlicher und neugieriger Entwickler, der immer bereit ist, neue Technologien zu lernen. <br>
-          <br>
-          Abgesehen vom Programmieren gibt es noch einige andere Aktivitäten, die ich gerne mache <br>
-          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span> Musik hören <br>
-          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span> Filme schauen <br>
-          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span> Sport treiben <br>
-          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span> Reisen. <br>
+        <p class="about-me__text">
+          Hallo zusammen, ich bin
+          <span class="name">Pacome Adoufack Tsamo aus Kamerun</span> <br />
+          Ich bin derzeit als Student bei Dci Caree Institut. <br />
+          Ich bin ein Junior Webentwickler, der sich auf Frontend-Technologien
+          spezialisiert mochte. <br />
+          Ich bin ein leidenschaftlicher und neugieriger Entwickler, der immer
+          bereit ist, neue Technologien zu lernen. <br />
+          <br />
+          Abgesehen vom Programmieren gibt es noch einige andere Aktivitäten,
+          die ich gerne mache <br />
+          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span>
+          Musik hören <br />
+          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span>
+          Filme schauen <br />
+          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span>
+          Sport treiben <br />
+          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span>
+          Reisen. <br />
         </p>
       </div>
       <div class="about-me__card-2">
-        <img class="about-me__img" src="./images/AP..png" alt="paco">
+        <img class="about-me__img" src="./images/AP..png" alt="paco" />
       </div>
     </section>
+
+    <section class="contact">
+      <h3 class="contact__title">CONTACT ME</h3>
+
+      <div class="contact-wrapper">
+        <div class="contact-card-1">
+          <h5 class="contact-card-1__title">CONTACT ME HERE</h5>
+          <div class="contact__text">
+            <p>
+              <i class="fa-solid fa-location-dot"></i> Location :58089 Hagen
+            </p>
+            <p>
+              <i class="fa-solid fa-envelope"></i> Email
+              :adoufacktsamop@yahoo.fr
+            </p>
+            <p>
+              <i class="fa-solid fa-user-graduate"></i> Education :Dci Caree
+              Institut
+            </p>
+            <p>
+              <i class="fa-solid fa-mobile"></i> Mobile Number :015906320162
+            </p>
+            <p>
+              <i class="fa-solid fa-globe"></i> Languages :Französich,Deutsch
+            </p>
+          </div>
+
+          <div class="contact-icon">
+            <a href="#"><i class="icon fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="icon fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="icon fa-brands fa-github"></i></a>
+            <a href="#"><i class="icon fa-brands fa-linkedin"></i></a>
+          </div>
+        </div>
+
+        <div class="contact-card-2">
+          <form>
+            <input type="text" name="name" placeholder="name" /><br />
+            <input type="email" name="email" placeholder="email" /><br />
+            <textarea
+              name="kommentar"
+              id="kommentar"
+              cols="50"
+              rows="10"
+              placeholder="füge ein kommentar"></textarea>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="footer__text-1">
+        <p>Designed and Developed by Adoufack Tsamo Pacome</p>
+      </div>
+      <div class="footer__text-1">
+        <p>Copyright@ 2024 AP</p>
+      </div>
+      <div class="footer__icon">
+        <a href="#"><i class="icon fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="icon fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="icon fa-brands fa-github"></i></a>
+        <a href="#"><i class="icon fa-brands fa-linkedin"></i></a>
+      </div>
+    </footer>
   </body>
 </html>
