--- a/index.html
+++ b/index.html
@@ -51,31 +51,26 @@
     </main>
 
     <section class="about-me">
+      <h3 class="about-me__title">MY SKILLS</h3>
       <div class="about-me__card-1">
-        <h3 class="about-me__title">Wer bin ich?</h3>
-        <p class="about-me__text">
-          Hallo zusammen, ich bin
-          <span class="name">Pacome Adoufack Tsamo aus Kamerun</span> <br />
-          Ich bin derzeit als Student bei Dci Caree Institut. <br />
-          Ich bin ein Junior Webentwickler, der sich auf Frontend-Technologien
-          spezialisiert mochte. <br />
-          Ich bin ein leidenschaftlicher und neugieriger Entwickler, der immer
-          bereit ist, neue Technologien zu lernen. <br />
-          <br />
-          Abgesehen vom Programmieren gibt es noch einige andere Aktivitäten,
-          die ich gerne mache <br />
-          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span>
-          Musik hören <br />
-          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span>
-          Filme schauen <br />
-          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span>
-          Sport treiben <br />
-          <span class="name"><i class="fa-solid fa-hand-point-right"></i></span>
-          Reisen. <br />
-        </p>
+        <div class="box-1 box">HTML</div>
+        <div class="box-2 box">CSS</div>
+        <div class="box-3 box">BOOTSTRAP</div>
+        <div class="box-4 box">CSS</div>
+        <div class="box-5 box">FIGMA</div>
+        <div class="box-6 box">CANVA</div>
+        <div class="box-7 box">REACT</div>
+        <div class="box-8 box">NODE.JS</div>
+        <div class="box-9 box">JAVASCRIPT</div>
+        <div class="box-10 box">GIT</div>
+        <div class="box-11 box">SASS</div>
+        <div class="box-12 box">WIX</div>
       </div>
       <div class="about-me__card-2">
-        <img class="about-me__img" src="./images/AP..png" alt="paco" />
+        <img
+          class="about-me__img"
+          src="./images/AP.-removebg-preview.png"
+          alt="paco" />
       </div>
     </section>
 
@@ -122,8 +117,10 @@
               id="kommentar"
               cols="50"
               rows="10"
-              placeholder="füge ein kommentar"></textarea>
+              placeholder="füge ein kommentar">
+            </textarea>
           </form>
+          <a class="contact-card-2__button" href="#">SEND</a>
         </div>
       </div>
     </section>
