--- a/index.html
+++ b/index.html
@@ -67,21 +67,26 @@
         <div class="box-12 box">WIX</div>
       </div>
       <div class="about-me__card-2">
-        <img
-          class="about-me__img"
-          src="./images/pacome.png"
-          alt="paco" />
+        <img class="about-me__img" src="./images/pacome.png" alt="paco" />
       </div>
     </section>
 
-    <section class="Project">
-     <h2 class="Project__title">My Project</h2>
-     <div class="Project__img">
-     <div class="Project__img-1"><img src="./images/student-1.jpeg" alt="student"></div>
-     <div class="Project__img-2"><img src="./images/student-2.jpeg" alt="student"></div>
-     <div class="Project__img-3"><img src="./images/student-3.jpeg" alt="student"></div>
-     <div class="Project__img-4"><img src="./images/student-4.jpeg" alt="student"></div>
-    </div>
+    <section class="project">
+      <h2 class="Project__title">My Project</h2>
+      <div class="Project__img">
+        <div class="Project__img-1">
+          <img src="./images/student-1.jpeg" alt="student" />
+        </div>
+        <div class="Project__img-2">
+          <img src="./images/student-2.jpeg" alt="student" />
+        </div>
+        <div class="Project__img-3">
+          <img src="./images/student-3.jpeg" alt="student" />
+        </div>
+        <div class="Project__img-4">
+          <img src="./images/student-4.jpeg" alt="student" />
+        </div>
+      </div>
     </section>
 
     <section class="contact">
